[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.22.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Iñigo Hidalgo Rey", email = "inigohrey@gmail.com"},
]
dependencies = [
    "polars>=0.17.6",
    "duckdb>=0.7.1",
    "scikit-learn>=1.2.2",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "torch>=2.0.0",
]
requires-python = ">=3.10"
license = {text = "None"}
